<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/note_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="textMultiLine"
            android:enabled="false"/>

        <Button
            android:id="@+id/button_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change"
            />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/note_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <TextView
            android:id="@+id/list_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/new_access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="enter users login"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/add_access_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_access" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>